plang/testing/logs/false-incorrect/156/program156.p.p
kwa rf (m (wdXf Y9H (Ye) (Cgg)) (UKq5B) OV5T) (Bv) (je qVi (P) (Q)).

xNmA Xydf (b (xFP (qV49z V38) vj (dCp) p) txB b (BvK)) :- (bbpV5 v00).

iB0M (lljl uYDQ jG7) B b (ZQ) :- (j).


sgKQ.
m pf W5 md :- (c5 (Nug), fCxV (R)), (b bL4 lb L75SL ZK), aoS (gjcMW (c (a epsC))) DmLW, o23Ie, qJVX; k0, i (il (w ml12x) (k mj) OM) WrZF7 UhQ (K), p BFPh0 PcuAM GsC (k9Bsi m0 TRm a (S2)); rZFD9 h2x w6dh, (bb); (t9W MYp (wE D FAso) (fWiU Dnvr b96v OQyd) (LHEA)).

au.
nzy0 (ZVv3) fm :- cywEF Zz.

c c60 V (yfV z6C1 Fg).
sLER In0 (pikmu (yvPA) (zG4NF (N) (uFtp6 (p) z V (T2))) Z) :- gG, tir1 qtD tJ; (nI4o), uN5Q, nkfqu (vrFEl cE1 SrtZI (BJG) G1) Cjz5P; kCt TJ9 (rKg2q (wlg (hG2V1 (e OZ (x rxPAT sK5n (a (Hhzk) tZKq) f) po) kIhqv EeF82 jqL)) (upZw r)) Aq, oBsjn eOcuL xlek UA t; sbC (w IK (YDs)) qCiWM (hCqD VSHP); e91 CKUf3 X1GHy sdMZK (aNTZ), ulTs; bK cAR7 Aj9a9 (WrPb); (((sUPli rotP))).

? (aZwv (YIA) (z) fM3 (uBrc4)).


